--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    border-right:1px solid #000000;
   }
   
   .past {
